battlecode-2025: phase 10 accepted round 1 -> phase 20